Modify build script in package.json by adding creation of REACT_APP_API_URL env variable

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build:win": "set REACT_APP_API_URL=/api&& react-app-rewired build",
+    "build:unix": "REACT_APP_API_URL=/api react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
